[package]
name = "glitch"
version = "0.1.0"
edition = "2021"

[dependencies]
vulkano = { git = "https://github.com/vulkano-rs/vulkano.git", version = "0.34.0" }
vulkano-shaders = { git = "https://github.com/vulkano-rs/vulkano.git", version = "0.34.0" }
winit = "0.30.7"

[profile.dev]
opt-level = 1 
